# ididntoffmyself

./: .gitignore  LICENSE  README.md
claude-code-native/: README.md  agent-roster.md  host-scan-scoping.md
claude-code-native/prompts/: recon.md  specialists.md  synthesizer.md
claude-code-native/workspace-template/: MEMORY.md  README.md
claude-code-native/workspace-template/.claude/: settings.json
docs/: agentic-advantage.md  methodology.md  vision.md
docs/trials/2026-04-20-first-host-scan/: FINDINGS.md  MSRC-report.md  README.md  public-report.md  scan-post-cleanup-report.md  scan-report.md
redforge-live/: ARCHITECTURE.md  README.md
redforge-live/docs/: netlimiter-integration.md
redforge-live/network/: ARCHITECTURE.md  CLAUDE.md  README.md  claude-settings-template.json
redforge-live/network/install/: install.ps1  uninstall.ps1
redforge-live/prompts/: triage.md
redforge-live/state/: README.md
redforge-live/watchdog/: install-task.ps1  watch.ps1
rfatk-cli/: .gitignore  LICENSE  README.md  pyproject.toml
rfatk-cli/docs/: self-scan-quickstart.md
rfatk-cli/docs/learnings/: 2026-04-trial-1-proctoring-scam-lessons.md
rfatk-cli/src/redforge_attack/: __init__.py  __main__.py  agent_loop.py  cli.py  config.py  default_roster.py  orchestrator.py  prompt_loader.py  schema.py  synthesizer.py  target.py  validator.py
rfatk-cli/src/redforge_attack/prompts/: forensic-deepdive.md  host_recon.md  host_specialists.md  investigator.md  recon.md  roster.yaml  specialists.md  synthesizer.md  targets_schema.md
rfatk-cli/src/redforge_attack/providers/: __init__.py  anthropic.py  base.py  openai_compat.py  registry.py
rfatk-cli/src/redforge_attack/tools/: __init__.py  dispatch.py  host_sandbox.py  host_schemas.py  sandbox.py  schemas.py
rfatk-cli/tests/: conftest.py  test_agent_loop.py  test_host_sandbox.py  test_integration_recon.py  test_orchestrator.py  test_providers.py  test_sandbox.py
rfatk-cli/tests/fixtures/tiny-target/: report.md  target.yaml
rfatk-cli/tests/fixtures/tiny-target/intake/: Dockerfile  app.py  db.py  users.py
(+4 files in other folders)
