[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redforge-attack"
version = "0.1.0"
description = "Multi-agent AI red-team CLI — parallel specialist attacks against a target codebase."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary (pre-release)" }
authors = [
    { name = "REDFORGE" },
]
keywords = ["security", "red-team", "pentesting", "ai-agents", "llm", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "anthropic>=0.39",
    "openai>=1.40",
    "httpx>=0.27",
    "rich>=13",
    "tomli;python_version<'3.11'",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
]

[project.scripts]
rfatk = "redforge_attack.cli:main"

[project.urls]
Homepage = "https://redforge.local"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redforge_attack = ["prompts/*.md", "prompts/*.yaml", "prompts/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Let formatter handle; don't hard-fail long lines

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring a real LLM provider (opt-in, costs tokens)",
]
